tests/ui/resolve/bad_type_path.stderr
error: identifier `S2` already declared
  --> ROOT/tests/ui/resolve/bad_type_path.sol:LL:CC
   |
LL | struct S2 {
   |        ^^
   |
note: previous declaration declared here
  --> ROOT/tests/ui/resolve/bad_type_path.sol:LL:CC
   |
LL | struct S2 {
   |        ^^

error: `S` is a struct, which cannot be indexed in type paths
  --> ROOT/tests/ui/resolve/bad_type_path.sol:LL:CC
   |
LL |     S.x s2;
   |     ^

error: `S2` is a struct, which cannot be indexed in type paths
  --> ROOT/tests/ui/resolve/bad_type_path.sol:LL:CC
   |
LL |     S2.x s4;
   |     ^^

error: symbol `f` resolved to multiple declarations
  --> ROOT/tests/ui/resolve/bad_type_path.sol:LL:CC
   |
LL |     f f1;
   |     ^

error: symbol `f` resolved to multiple declarations
  --> ROOT/tests/ui/resolve/bad_type_path.sol:LL:CC
   |
LL |     f.x f2;
   |     ^

error: aborting due to 5 previous errors

